--- a/package.json
+++ b/package.json
@@ -28,13 +28,16 @@
     "lint-fix:js": "npm run lint:js -- --fix",
     "lint-fix:md": "npm run lint:md -- --fix",
     "lint-fix": "run-s lint-fix:*",
+    "migrate:wp": "run-s build wp:*",
     "release:major": "release major",
     "release:minor": "release minor",
     "release:patch": "release patch",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "wp:pages": "cp dist/pages/*.md src/collections/pages"
   },
   "dependencies": {
     "@11ty/eleventy": "^0.12.1",
+    "@11ty/eleventy-navigation": "^0.1.6",
     "@11ty/eleventy-plugin-rss": "^1.1.1",
     "@tbranyen/jsdom": "^13.0.0",
     "airtable": "^0.10.0",
@@ -73,7 +76,8 @@
     "stylelint": "^13.11.0",
     "stylelint-config-standard-scss": "^1.1.0",
     "stylelint-order": "^4.1.0",
-    "stylelint-scss": "^3.19.0"
+    "stylelint-scss": "^3.19.0",
+    "turndown": "^7.0.0"
   },
   "lint-staged": {
     "*.js": [
