--- a/.github/workflows/ensure-cms-branch.yml
+++ b/.github/workflows/ensure-cms-branch.yml
@@ -15,7 +15,10 @@ jobs:
       TARGET_BRANCH: "dev" # Default to dev branch
     steps:
     - uses: actions/checkout@v2
-    - uses: mikefarah/yq@v4.6.3
+    - name: Install yq
+      run: |
+        sudo wget -O /usr/local/bin/yq https://github.com/mikefarah/yq/releases/download/v4.6.3/yq_linux_amd64
+        sudo chmod +x /usr/local/bin/yq
     - name: Adjust target branch for environment
       if: endsWith(github.ref, '/main') # If the commit is in
       run: |
