--- a/.github/workflows/ensure-cms-branch.yml
+++ b/.github/workflows/ensure-cms-branch.yml
@@ -15,16 +15,14 @@ jobs:
       TARGET_BRANCH: "dev" # Default to dev branch
     steps:
     - uses: actions/checkout@v2
-    - name: Install yq
-      run: |
-        sudo wget -O /usr/local/bin/yq https://github.com/mikefarah/yq/releases/download/v4.6.3/yq_linux_amd64
-        sudo chmod +x /usr/local/bin/yq
     - name: Adjust target branch for environment
       if: endsWith(github.ref, '/main') # If the commit is in
       run: |
         echo "TARGET_BRANCH=main" >> $GITHUB_ENV
     - name: Update CMS branch configuration
-      run: yq eval -i '.backend.branch = "$TARGET_BRANCH"' src/admin/config.yml
+      uses: mikefarah/yq@v4.6.3
+      with:
+        cmd: yq eval -i '.backend.branch = "$TARGET_BRANCH"' src/admin/config.yml
     - name: Commit changes
       uses: stefanzweifel/git-auto-commit-action@v4
       with:
