chore: clean up and restore tag filtering and search functionality

--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -19,6 +19,10 @@ collections:
       - label: "Title"
         name: "title"
         widget: "string"
+      - label: "Excerpt"
+        name: "excerpt"
+        widget: "text"
+        hint: "The excerpt is shown in search results."
       - label: "Navigation Order"
         name: "menu_order"
         widget: number
