--- a/package.json
+++ b/package.json
@@ -52,7 +52,9 @@
     "netlify-cms-widget-uuid-v4": "^1.0.12",
     "nodemailer": "^6.4.18",
     "nunjucks": "^3.2.3",
+    "rimraf": "^3.0.2",
     "sanitize.css": "^12.0.1",
+    "simple-git": "2.38.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
@@ -71,7 +73,6 @@
     "netlify-cms-proxy-server": "^1.3.12",
     "npm-run-all": "^4.1.5",
     "release": "^6.3.0",
-    "rimraf": "^3.0.2",
     "sass": "^1.32.8",
     "stylelint": "^13.11.0",
     "stylelint-config-standard-scss": "^1.1.0",
