--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
   "private": true,
   "scripts": {
     "build": "npm-run-all clean -s build:*",
+    "build:mapDependency": "npm explore covid-data-monitor -- npm run build:noInfusion",
     "build:eleventy": "eleventy",
     "build:netlify-cms": "./build-cms.js",
     "clean": "rimraf dist",
-    "dev": "cross-env ELEVENTY_ENV=development eleventy --serve --port=3000",
+    "dev": "npm run build:mapDependency && cross-env ELEVENTY_ENV=development eleventy --serve --port=3000",
     "start": "npm-run-all clean start:*",
     "start:eleventy": "concurrently \"npm run dev\" \"./build-cms.js -w\" \"netlify-cms-proxy-server\"",
     "serve": "npx serve dist",
@@ -42,7 +43,7 @@
     "autoprefixer": "^10.2.4",
     "axios": "^0.21.1",
     "concurrently": "^6.0.0",
-    "covid-data-monitor": "cindyli/covid-data-monitor#latest",
+    "covid-data-monitor": "github:inclusive-design/covid-data-monitor",
     "eleventy-plugin-pwa": "^1.0.8",
     "estrella": "^1.4.0",
     "html-minifier": "^4.0.0",
