--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build": "npm-run-all clean -s build:*",
     "build:mapDependency": "npm explore covid-data-monitor -- npm run build:noInfusion",
     "build:eleventy": "eleventy",
-    "build:netlify-cms": "./build-cms.js",
+    "build:netlify-cms": "node ./build-cms.js",
     "clean": "rimraf dist",
     "dev": "npm run build:mapDependency && cross-env ELEVENTY_ENV=development eleventy --serve --port=3000",
     "start": "npm-run-all clean start:*",
