--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wecount/wecount.inclusivedesign.ca",
-  "version": "2.6.0",
+  "version": "2.7.0",
   "description": "The source files for the We Count website, built with Eleventy.",
   "license": "BSD-3-Clause",
   "author": "OCAD University <idrc@ocadu.ca>",
@@ -15,7 +15,7 @@
     "build": "npm-run-all clean -s build:*",
     "build:mapDependency": "npm explore covid-data-monitor -- npm run build:noInfusion",
     "build:eleventy": "eleventy",
-    "build:netlify-cms": "./build-cms.js",
+    "build:netlify-cms": "node ./build-cms.js",
     "clean": "rimraf dist",
     "dev": "npm run build:mapDependency && cross-env ELEVENTY_ENV=development eleventy --serve --port=3000",
     "start": "npm-run-all clean start:*",
