feat: enable creating resource records, no preview

--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -168,6 +168,7 @@ collections:
     sortable_fields: ['title']
     editor:
       preview: false
+    create: true
     fields:
       - label: "Title"
         name: "title"
