--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -166,8 +166,8 @@ collections:
     label_singular: Resource
     folder: "src/collections/resources"
     sortable_fields: ['title']
-    editor:
-      preview: false
+    slug: "{{title}}-{{type}}"
+    preview_path: "resources/{{slug}}"
     create: true
     fields:
       - label: "Title"
