--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "clean": "rimraf dist",
     "dev": "npm run build:mapDependency && cross-env ELEVENTY_ENV=development eleventy --serve --port=3000",
     "start": "npm-run-all clean start:*",
-    "start:eleventy": "concurrently \"npm run dev\" \"./build-cms.js -w\" \"netlify-cms-proxy-server\"",
+    "start:eleventy": "concurrently \"npm run dev\" \"node ./build-cms.js -w\" \"netlify-cms-proxy-server\"",
     "serve": "npx serve dist",
     "lint:css": "stylelint src/scss/**/*.scss",
     "lint:js": "eslint \"**/*.js\"",
