--- a/package.json
+++ b/package.json
@@ -44,11 +44,11 @@
     "autoprefixer": "^10.2.4",
     "axios": "^0.21.1",
     "concurrently": "^6.0.0",
-    "covid-data-monitor": "github:inclusive-design/covid-data-monitor",
+    "covid-data-monitor": "^1.0.0",
     "eleventy-plugin-pwa": "^1.0.8",
     "estrella": "^1.4.0",
     "html-minifier": "^4.0.0",
-    "infusion": "^3.0.0-dev.20210223T161058Z.1743e0020.FLUID-6580",
+    "infusion": "^3.0.0-dev.20210421T131019Z.2d15978fb.FLUID-6580",
     "markdown-it": "^12.0.4",
     "netlify-cms-widget-uuid-v4": "^1.0.12",
     "nodemailer": "^6.4.18",
