--- a/package.json
+++ b/package.json
@@ -40,33 +40,33 @@
     "@11ty/eleventy-navigation": "^0.3.2",
     "@11ty/eleventy-plugin-rss": "^1.1.2",
     "@tbranyen/jsdom": "^13.0.0",
-    "airtable": "^0.10.0",
-    "axios": "^0.21.1",
-    "concurrently": "^6.0.0",
+    "airtable": "^0.11.2",
+    "axios": "^0.26.0",
+    "concurrently": "^7.0.0",
     "covid-data-monitor": "^1.0.0",
     "eleventy-plugin-pwa": "^1.0.8",
     "estrella": "^1.4.1",
     "html-minifier": "^4.0.0",
-    "infusion": "^3.0.0-dev.20210421T131019Z.2d15978fb.FLUID-6580",
+    "infusion": "3.0.0-dev.20210421T131019Z.2d15978fb.FLUID-6580",
     "markdown-it": "^12.0.4",
     "modern-css-reset": "^1.4.0",
-    "netlify-cms-widget-uuid-v4": "^1.0.12",
+    "netlify-cms-widget-uuid-v4": "1.0.12",
     "nodemailer": "^6.4.18",
     "nunjucks": "^3.2.3",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^16.2.1",
-    "@commitlint/config-conventional": "^12.0.0",
+    "@commitlint/config-conventional": "^16.2.1",
     "autoprefixer": "^10.4.2",
     "clean-css": "^5.2.4",
     "cross-env": "^7.0.3",
     "cssesc": "^3.0.0",
-    "dotenv": "^8.2.0",
+    "dotenv": "^16.0.0",
     "eleventy-plugin-error-overlay": "^0.1.2",
     "eslint": "^7.20.0",
     "eslint-plugin-react": "^7.28.0",
-    "husky": "^6.0.0",
+    "husky": "^7.0.4",
     "lint-staged": "^10.5.4",
     "markdownlint-cli": "^0.31.1",
     "netlify-cms-proxy-server": "^1.3.23",
