--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "infusion": "3.0.0-dev.20210421T131019Z.2d15978fb.FLUID-6580",
     "markdown-it": "^12.0.4",
     "modern-css-reset": "^1.4.0",
-    "netlify-cms-widget-uuid-v4": "1.0.12",
+    "netlify-cms-widget-uuid-v4": "^1.1.1",
     "nodemailer": "^6.4.18",
     "nunjucks": "^3.2.3",
     "uuid": "^8.3.2"
@@ -64,8 +64,8 @@
     "cssesc": "^3.0.0",
     "dotenv": "^16.0.0",
     "eleventy-plugin-error-overlay": "^0.1.2",
-    "eslint": "^8.9.0",
-    "eslint-plugin-react": "^7.28.0",
+    "eslint": "^8.10.0",
+    "eslint-plugin-react": "^7.29.2",
     "husky": "^7.0.4",
     "lint-staged": "^12.3.4",
     "markdownlint-cli": "^0.31.1",
@@ -73,8 +73,8 @@
     "npm-run-all": "^4.1.5",
     "release": "^6.3.0",
     "rimraf": "^3.0.2",
-    "sass": "^1.49.8",
-    "stylelint": "^14.5.1",
+    "sass": "^1.49.9",
+    "stylelint": "^14.5.3",
     "stylelint-config-standard-scss": "^3.0.0",
     "stylelint-order": "^5.0.0",
     "stylelint-scss": "^4.1.0",
