--- a/package.json
+++ b/package.json
@@ -36,49 +36,49 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@11ty/eleventy": "^0.12.0",
-    "@11ty/eleventy-navigation": "^0.3.2",
-    "@11ty/eleventy-plugin-rss": "^1.1.2",
-    "@tbranyen/jsdom": "^13.0.0",
-    "airtable": "^0.11.2",
-    "axios": "^0.26.0",
-    "concurrently": "^7.0.0",
-    "covid-data-monitor": "^1.0.0",
-    "eleventy-plugin-pwa": "^1.0.8",
-    "estrella": "^1.4.1",
-    "html-minifier": "^4.0.0",
+    "@11ty/eleventy": "1.0.2",
+    "@11ty/eleventy-navigation": "0.3.5",
+    "@11ty/eleventy-plugin-rss": "1.2.0",
+    "@tbranyen/jsdom": "13.0.0",
+    "airtable": "0.11.6",
+    "axios": "1.3.2",
+    "concurrently": "7.6.0",
+    "covid-data-monitor": "1.0.0",
+    "eleventy-plugin-pwa": "1.0.8",
+    "estrella": "1.4.1",
+    "html-minifier": "4.0.0",
     "infusion": "3.0.0-dev.20210421T131019Z.2d15978fb.FLUID-6580",
-    "markdown-it": "^12.0.4",
-    "modern-css-reset": "^1.4.0",
-    "netlify-cms-widget-uuid-v4": "^1.1.1",
-    "nodemailer": "^6.4.18",
-    "nunjucks": "^3.2.3",
-    "uuid": "^8.3.2"
+    "markdown-it": "13.0.1",
+    "modern-css-reset": "1.4.0",
+    "netlify-cms-widget-uuid-v4": "1.1.1",
+    "nodemailer": "6.9.1",
+    "nunjucks": "3.2.3",
+    "uuid": "9.0.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^16.2.1",
-    "@commitlint/config-conventional": "^16.2.1",
-    "autoprefixer": "^10.4.2",
-    "clean-css": "^5.2.4",
-    "cross-env": "^7.0.3",
-    "cssesc": "^3.0.0",
-    "dotenv": "^16.0.0",
-    "eleventy-plugin-error-overlay": "^0.1.2",
-    "eslint": "^8.10.0",
-    "eslint-plugin-react": "^7.29.2",
-    "husky": "^7.0.4",
-    "lint-staged": "^12.3.4",
-    "markdownlint-cli": "^0.31.1",
-    "netlify-cms-proxy-server": "^1.3.24",
-    "npm-run-all": "^4.1.5",
-    "release": "^6.3.0",
-    "rimraf": "^3.0.2",
-    "sass": "^1.49.9",
-    "stylelint": "^14.5.3",
-    "stylelint-config-standard-scss": "^3.0.0",
-    "stylelint-order": "^5.0.0",
-    "stylelint-scss": "^4.1.0",
-    "turndown": "^7.1.1"
+    "@commitlint/cli": "17.4.2",
+    "@commitlint/config-conventional": "17.4.2",
+    "autoprefixer": "10.4.13",
+    "clean-css": "5.3.2",
+    "cross-env": "7.0.3",
+    "cssesc": "3.0.0",
+    "dotenv": "16.0.3",
+    "eleventy-plugin-error-overlay": "1.0.0",
+    "eslint": "8.33.0",
+    "eslint-plugin-react": "7.32.2",
+    "husky": "8.0.3",
+    "lint-staged": "13.1.0",
+    "markdownlint-cli": "0.33.0",
+    "netlify-cms-proxy-server": "1.3.24",
+    "npm-run-all": "4.1.5",
+    "release": "6.3.1",
+    "rimraf": "4.1.2",
+    "sass": "1.58.0",
+    "stylelint": "14.16.1",
+    "stylelint-config-standard-scss": "6.1.0",
+    "stylelint-order": "6.0.1",
+    "stylelint-scss": "4.3.0",
+    "turndown": "7.1.1"
   },
   "lint-staged": {
     "*.js": [
