--- a/package.json
+++ b/package.json
@@ -36,18 +36,18 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@11ty/eleventy": "1.0.2",
+    "@11ty/eleventy": "2.0.0",
     "@11ty/eleventy-navigation": "0.3.5",
     "@11ty/eleventy-plugin-rss": "1.2.0",
     "@tbranyen/jsdom": "13.0.0",
     "airtable": "0.11.6",
-    "axios": "1.3.2",
+    "axios": "1.3.4",
     "concurrently": "7.6.0",
     "covid-data-monitor": "1.0.0",
     "eleventy-plugin-pwa": "1.0.8",
     "estrella": "1.4.1",
     "html-minifier": "4.0.0",
-    "infusion": "3.0.0-dev.20210421T131019Z.2d15978fb.FLUID-6580",
+    "infusion": "4.6.0",
     "markdown-it": "13.0.1",
     "modern-css-reset": "1.4.0",
     "netlify-cms-widget-uuid-v4": "1.1.1",
@@ -56,28 +56,28 @@
     "uuid": "9.0.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "17.4.2",
-    "@commitlint/config-conventional": "17.4.2",
+    "@commitlint/cli": "17.4.4",
+    "@commitlint/config-conventional": "17.4.4",
     "autoprefixer": "10.4.13",
     "clean-css": "5.3.2",
     "cross-env": "7.0.3",
     "cssesc": "3.0.0",
     "dotenv": "16.0.3",
     "eleventy-plugin-error-overlay": "1.0.0",
-    "eslint": "8.33.0",
+    "eslint": "8.35.0",
     "eslint-plugin-react": "7.32.2",
     "husky": "8.0.3",
-    "lint-staged": "13.1.0",
+    "lint-staged": "13.1.2",
     "markdownlint-cli": "0.33.0",
     "netlify-cms-proxy-server": "1.3.24",
     "npm-run-all": "4.1.5",
     "release": "6.3.1",
     "rimraf": "4.1.2",
-    "sass": "1.58.0",
-    "stylelint": "14.16.1",
-    "stylelint-config-standard-scss": "6.1.0",
-    "stylelint-order": "6.0.1",
-    "stylelint-scss": "4.3.0",
+    "sass": "1.58.3",
+    "stylelint": "15.2.0",
+    "stylelint-config-standard-scss": "7.0.1",
+    "stylelint-order": "6.0.2",
+    "stylelint-scss": "4.4.0",
     "turndown": "7.1.1"
   },
   "lint-staged": {
