--- a/manifest.json
+++ b/manifest.json
@@ -1,4 +1,5 @@
 {
+  "id": "/",
   "name": "We Count",
   "short_name": "WeCount",
   "description": "Removing bias and exclusion in the data economy.",
@@ -11,7 +12,7 @@
     "src": "/images/logo-192.png",
     "type": "image/png",
     "sizes": "192x192",
-    "purpose": "any maskable"
+    "purpose": "maskable"
   }, {
     "src": "/images/logo-512.png",
     "type": "image/png",
