--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "axios": "1.3.4",
     "concurrently": "7.6.0",
     "covid-data-monitor": "1.0.0",
-    "eleventy-plugin-pwa": "1.0.8",
+    "eleventy-plugin-pwa-v2": "1.0.1",
     "estrella": "1.4.1",
     "html-minifier": "4.0.0",
     "infusion": "4.6.0",
