chore: run lint action when NPM dependencies change
Right now the lint GitHub Action only runs when lintable files (JS, MD, SCSS) are modified. This PR will also trigger the lint action when the package.json and/or package-lock.json files change so that we can better assess the impact of, say, a Dependabot update to Stylelint.

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -3,12 +3,16 @@ name: Lint assets
 on:
   push:
     paths:
+      - 'package.json'
+      - 'package-lock.json'
       - '**.js'
       - '**.md'
       - '**.scss'
       - '!src/collections/**.md'
   pull_request:
     paths:
+      - 'package.json'
+      - 'package-lock.json'
       - '**.js'
       - '**.md'
       - '**.scss'
