--- a/netlify.toml
+++ b/netlify.toml
@@ -2,6 +2,7 @@
   command = "npm run build"
   publish = "dist"
   functions = "functions"
+  ignore = "git log -1 --pretty=%B | grep dependabot"
 
 [build.environment]
   NODE_OPTIONS = "--max_old_space_size=4096"
