--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -1,6 +1,13 @@
 backend:
   name: git-gateway
   branch: dev
+  squash_merges: true
+commit_messages:
+  create: 'chore(cms): create "{{path}}"'
+  update: 'chore(cms): update "{{path}}"'
+  delete: 'chore(cms): delete "{{path}}"'
+  uploadMedia: 'chore(cms): upload "{{path}}"'
+  deleteMedia: 'chore(cms): delete "{{path}}"'
 local_backend: true
 publish_mode: editorial_workflow
 site_url: "https://wecount.inclusivedesign.ca"
