--- a/.github/workflows/lint-build.yml
+++ b/.github/workflows/lint-build.yml
@@ -1,4 +1,4 @@
-name: Lint assets
+name: Lint assets and build site
 
 on:
   push:
@@ -9,7 +9,7 @@ on:
     branches:
       - dev
 jobs:
-  lint:
+  lint-build:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
@@ -22,3 +22,5 @@ jobs:
       run: npm ci
     - name: Lint assets
       run: npm run lint
+    - name: Build site
+      run: npm run build
