--- a/.github/workflows/lint-build.yml
+++ b/.github/workflows/lint-build.yml
@@ -24,3 +24,6 @@ jobs:
       run: npm run lint
     - name: Build site
       run: npm run build
+      env:
+        AIRTABLE_BASE_DEV: ${{ secrets.AIRTABLE_BASE_DEV }}
+        AIRTABLE_API_KEY: ${{ secrets.AIRTABLE_API_KEY }}
