--- a/.github/workflows/lint-build.yml
+++ b/.github/workflows/lint-build.yml
@@ -5,7 +5,9 @@ on:
     branches:
       - dev
       - main
-  pull_request:
+  pull_request_target:
+    types:
+      - opened
     branches:
       - dev
 jobs:
