--- a/.github/workflows/lint-build.yml
+++ b/.github/workflows/lint-build.yml
@@ -6,15 +6,30 @@ on:
       - dev
       - main
   pull_request_target:
-    types:
-      - opened
-    branches:
-      - dev
+    types: [opened, synchronize]
 jobs:
   lint-build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
+    - name: Get User Permission
+      id: checkAccess
+      uses: actions-cool/check-user-permission@v2
+      with:
+        require: write
+        username: ${{ github.triggering_actor }}
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Check User Permission
+      if: steps.checkAccess.outputs.require-result == 'false'
+      run: |
+        echo "${{ github.triggering_actor }} does not have permissions on this repo."
+        echo "Current permission level is ${{ steps.checkAccess.outputs.user-permission }}"
+        echo "Job originally triggered by ${{ github.actor }}"
+        exit 1
+    - name: Checkout code
+      uses: actions/checkout@v4
+      with:
+        ref: ${{  github.event.pull_request.head.sha }} # This is dangerous without the first access check
     - name: Cache node modules
       uses: actions/cache@v3
       with:
