ci: adjust config

--- a/.github/workflows/lint-build.yml
+++ b/.github/workflows/lint-build.yml
@@ -6,7 +6,7 @@ on:
       - dev
       - main
   pull_request_target:
-    types: [opened, synchronize]
+    types: [opened, reopened, synchronize]
 jobs:
   lint-build:
     runs-on: ubuntu-latest
