--- a/netlify.toml
+++ b/netlify.toml
@@ -21,6 +21,11 @@
   status = 200
 
 [[redirects]]
+  from = "/map/"
+  to = "https://map.wecount.inclusivedesign.ca"
+  status = 301
+
+[[redirects]]
   from = "/admin/*"
   status = 200
   force = true
