feat: remove COVID Data Monitor, redirect to new URL (fix #1636) (#1641)

--- a/netlify.toml
+++ b/netlify.toml
@@ -21,6 +21,12 @@
   status = 200
 
 [[redirects]]
+  from = "/map/"
+  to = "https://map.wecount.inclusivedesign.ca"
+  status = 301
+  force = true
+
+[[redirects]]
   from = "/admin/*"
   status = 200
   force = true
