--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
   ],
   "private": true,
   "scripts": {
-    "build": "npm-run-all clean -s build:*",
-    "build:eleventy": "node --max-old-space-size=6000 ./node_modules/@11ty/eleventy/cmd.js",
-    "build:netlify-cms": "node ./build-cms.js",
+    "build": "npm-run-all -l clean -p build:*",
+    "build:eleventy": "cross-env NODE_ENV=production node --max-old-space-size=6000 ./node_modules/@11ty/eleventy/cmd.js",
+    "build:cms": "node ./build-cms.js",
     "clean": "rimraf dist",
-    "dev": "cross-env ELEVENTY_ENV=development node --max-old-space-size=6000 ./node_modules/@11ty/eleventy/cmd.js --incremental --serve --port=3000",
-    "start": "npm-run-all clean start:*",
-    "start:eleventy": "concurrently \"npm run dev\" \"node ./build-cms.js -w\" \"netlify-cms-proxy-server\"",
+    "cms": "decap-server",
+    "dev": "node --max-old-space-size=6000 ./node_modules/@11ty/eleventy/cmd.js --incremental --serve --port=3000",
+    "start": "npm-run-all -l clean -p start:*",
+    "start:cms": "node ./build-cms.js -w",
+    "start:eleventy": "run-p dev cms",
     "serve": "npx serve dist",
     "lint:css": "stylelint src/scss/**/*.scss",
     "lint:js": "eslint \"**/*.js\"",
@@ -38,20 +40,23 @@
     "@11ty/eleventy": "2.0.1",
     "@11ty/eleventy-navigation": "0.3.5",
     "@11ty/eleventy-plugin-rss": "1.2.0",
-    "@tbranyen/jsdom": "13.0.0",
     "airtable": "0.12.2",
     "axios": "1.6.5",
     "concurrently": "8.2.2",
+    "decap-cms": "3.0.12",
     "eleventy-plugin-fluid": "2.7.0",
     "eleventy-plugin-pwa-v2": "1.0.1",
     "estrella": "1.4.1",
     "html-minifier": "4.0.0",
     "infusion": "4.6.0",
+    "linkedom": "0.16.6",
     "markdown-it": "14.0.0",
     "modern-css-reset": "1.4.0",
     "netlify-cms-widget-uuid-v4": "1.1.1",
     "nodemailer": "6.9.8",
     "nunjucks": "3.2.4",
+    "prop-types": "15.8.1",
+    "react": "16.14.0",
     "uuid": "9.0.1"
   },
   "devDependencies": {
@@ -61,13 +66,13 @@
     "clean-css": "5.3.3",
     "cross-env": "7.0.3",
     "cssesc": "3.0.0",
+    "decap-server": "3.0.1",
     "dotenv": "16.3.1",
     "eslint": "8.56.0",
     "eslint-plugin-react": "7.33.2",
     "husky": "8.0.3",
     "lint-staged": "15.2.0",
     "markdownlint-cli": "0.38.0",
-    "netlify-cms-proxy-server": "1.3.24",
     "npm-run-all": "4.1.5",
     "release": "6.3.1",
     "rimraf": "5.0.5",
