--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "serve": "npx serve _site",
     "lint": "run-s -l lint:*",
     "lint:styles": "stylelint \"**/*.scss\"",
-    "lint:scripts": "eslint \"**/*.{js,md}\"",
+    "lint:scripts": "eslint \"**/*.{js,mjs,md}\"",
     "lint:markdown": "markdownlint-cli2 \"**/*.md\"",
     "lint:yml": "eslint \"**/*.yml\"",
     "lint-fix:styles": "npm run lint:styles -- --fix",
@@ -60,8 +60,8 @@
     "uuid": "9.0.1"
   },
   "devDependencies": {
-    "@commitlint/cli": "19.0.3",
-    "@commitlint/config-conventional": "18.6.3",
+		"@commitlint/cli": "19.0.3",
+    "@commitlint/config-conventional": "19.0.3",
     "autoprefixer": "10.4.17",
     "cross-env": "7.0.3",
     "decap-server": "3.0.2",
@@ -88,7 +88,7 @@
   },
   "lint-staged": {
     "*.scss": "stylelint --fix",
-    "*.{js,yml}": "eslint --fix",
+    "*.{js,mjs,yml}": "eslint --fix",
     "*.md": [
       "markdownlint-cli2 --fix",
       "eslint --fix"
